# flake8_module_import

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
flake8_module_import/: flake8_module_import.py
