[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [
  {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
  "flake8",
]
description = "A Flake8 plugin to enforce module imports instead of direct imports"
name = "flake8-module-import"
version = "0.1.0"

[tool.flake8]
max-line-length = 80

[tool.black]
line-length = 80